# iperf-jni

./: README.md
app/: build.gradle
app/src/main/java/com/iperf3/jni/: Iperf3Callback.java  Iperf3Config.java
app/src/main/java/com/shenyong/iperf/runtime/: CmdViewModel.kt  JniViewModel.kt
app/src/main/jni/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  iperf3_java_callback.c  iperf3_java_callback.h  iperf3_jni_api.c
app/src/main/jni/iperf-3.1.3/src/: iperf.h  main.c
app/src/main/jni/iperf-3.17.1/src/: iperf.h  iperf_api.c  iperf_error.c  main.c
